k8s/code-tracker-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: code-tracker-service
  namespace: default
spec:
  selector:
    app: code-tracker
  ports:
    - port: 80
      targetPort: 80
  sessionAffinity: None
  type: LoadBalancer
